--- a/main.css
+++ b/main.css
@@ -5,3 +5,166 @@
 
 /* CSS Generales */
 
+
+body {}
+
+.contenedor {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(152,233,244,1) 0%, rgba(84,240,199,1) 48%, rgba(100,250,168,1) 100%, rgba(0,209,251,1) 100%);
+
+    font-family: 'Patrick Hand', cursive;
+
+/*     padding: 1rem; */
+    display: grid;
+
+    grid-template-areas:
+        "header"
+        "nav"
+        "main"
+        "footer"
+    ;
+}
+
+header {
+    grid-area: header;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+}
+
+nav {
+    grid-area: nav;
+    background-color: rgb(208, 230, 230);
+}
+
+.ul-nav{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: center;
+
+}
+
+.li-nav{
+    background-color: rgb(255, 250, 250);
+    padding: 0.1rem 0.6rem;
+    border: black 1px solid;
+    border-radius: 5rem;
+    margin: 0.3rem;
+}
+
+a{
+    text-decoration: none;
+}
+
+main {
+    grid-area: main;
+    padding: 0.3rem 0.5rem;
+}
+
+footer {
+    grid-area: footer;
+    padding-top: 0.3rem;
+/*     display: flex;
+    flex-direction: column; */
+    text-align: center;
+}
+
+h1 {
+    font-family: 'Oleo Script Swash Caps', cursive;
+    font-size: 20px;
+}
+
+
+.logo {
+    width: 90px;
+    height: 90px;
+}
+
+.img-contacto{
+    width: 50px;
+    height: 50px;
+}
+
+.red-contacto a{
+    padding: 1rem;
+}
+
+.red-contacto h3{
+    padding: 0.5rem;
+}
+
+.red-contacto iframe{
+ width: 90vw;
+}
+
+/* Pie de pagina */
+
+
+.diseñador{
+    background-color: black;
+    height: 2rem;
+}
+.diseñador a{
+    color: white;
+}
+/* Estilo index*/
+
+.h2-main{
+    padding: 0.3rem 0rem;
+}
+
+.info-util-index{
+    padding: 1rem 0rem;
+}
+
+.ul-main-index{
+    padding: 1.5rem 2rem;
+}
+
+/* Producto */
+
+.main-producto{
+    background-color: rgb(222, 229, 235);
+    padding: 1rem;
+    text-align: center;
+}
+
+.art{
+    padding: 0.5rem 0rem;
+}
+.producto{
+    width: 80vw;
+    border-radius: 8rem;
+}
+
+/* Personalizados */
+
+.main-personalizado{
+    padding: 0rem 2rem;
+}
+
+.main-personalizado div img{
+    width: 150px;
+    height: 150px;
+    margin: 0.3rem 1rem;
+    border: solid 2px black;
+    
+}
+
+.img-personalizado{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+
+/* Informacion adicional */
+
+.main-info-adic{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Preguntas frecuentes */
