--- a/main.css
+++ b/main.css
@@ -5,16 +5,13 @@
 
 /* CSS Generales */
 
-
-body {}
-
 .contenedor {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(152,233,244,1) 0%, rgba(84,240,199,1) 48%, rgba(100,250,168,1) 100%, rgba(0,209,251,1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(152, 233, 244, 1) 0%, rgba(84, 240, 199, 1) 48%, rgba(100, 250, 168, 1) 100%, rgba(0, 209, 251, 1) 100%);
 
     font-family: 'Patrick Hand', cursive;
 
-/*     padding: 1rem; */
+    /*     padding: 1rem; */
     display: grid;
 
     grid-template-areas:
@@ -28,7 +25,7 @@ body {}
 header {
     grid-area: header;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     background-color: rgb(255, 255, 255);
 }
@@ -38,7 +35,7 @@ nav {
     background-color: rgb(208, 230, 230);
 }
 
-.ul-nav{
+.ul-nav {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -46,7 +43,7 @@ nav {
 
 }
 
-.li-nav{
+.li-nav {
     background-color: rgb(255, 250, 250);
     padding: 0.1rem 0.6rem;
     border: black 1px solid;
@@ -54,7 +51,7 @@ nav {
     margin: 0.3rem;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -66,7 +63,7 @@ main {
 footer {
     grid-area: footer;
     padding-top: 0.3rem;
-/*     display: flex;
+    /*     display: flex;
     flex-direction: column; */
     text-align: center;
 }
@@ -78,93 +75,189 @@ h1 {
 
 
 .logo {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
 }
 
-.img-contacto{
+.img-contacto {
     width: 50px;
     height: 50px;
 }
 
-.red-contacto a{
+.red-contacto a {
     padding: 1rem;
 }
 
-.red-contacto h3{
+.red-contacto h3 {
     padding: 0.5rem;
 }
 
-.red-contacto iframe{
- width: 90vw;
+.red-contacto iframe {
+    width: 90vw;
 }
 
 /* Pie de pagina */
 
 
-.diseñador{
+.diseñador {
     background-color: black;
     height: 2rem;
 }
-.diseñador a{
+
+.diseñador a {
     color: white;
 }
+
 /* Estilo index*/
 
-.h2-main{
+.h2-main {
     padding: 0.3rem 0rem;
 }
 
-.info-util-index{
+.info-util-index {
     padding: 1rem 0rem;
 }
 
-.ul-main-index{
+.ul-main-index {
     padding: 1.5rem 2rem;
 }
 
 /* Producto */
 
-.main-producto{
+.main-producto {
     background-color: rgb(222, 229, 235);
     padding: 1rem;
     text-align: center;
 }
 
-.art{
+.art {
     padding: 0.5rem 0rem;
 }
-.producto{
+
+.producto {
     width: 80vw;
     border-radius: 8rem;
 }
 
 /* Personalizados */
 
-.main-personalizado{
+.main-personalizado {
     padding: 0rem 2rem;
 }
 
-.main-personalizado div img{
+.main-personalizado div img {
     width: 150px;
     height: 150px;
     margin: 0.3rem 1rem;
     border: solid 2px black;
-    
+
 }
 
-.img-personalizado{
+.img-personalizado {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 /* Informacion adicional */
 
-.main-info-adic{
+.main-info-adic {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 /* Preguntas frecuentes */
+
+.main-consultas {
+    padding: 0rem 0.8rem;
+}
+
+.h2-consultas {
+    padding: 0.5rem 0rem;
+}
+
+.consultas2 {
+    padding: 0.5rem 0rem;
+}
+
+table {
+    padding: 0.3rem 0.3rem;
+    background-color: white;
+}
+
+table,
+tr,
+th,
+td {
+    margin: auto;
+    border: 1px solid black;
+}
+
+/* Empieza Media query tablet */
+
+@media screen and (min-width: 768px) {
+    /* Productos */
+
+    .main-producto {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .art {
+        width: 45vw;
+    }
+
+    .producto {
+        width: 300px;
+        height: 300px;
+    }
+
+    /* Informacion adicional */
+
+
+    .videos {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .caja-videos{
+        padding: 0.6rem 1.8rem;
+    }
+}
+
+/* Empieza Media query desktop */
+
+@media screen and (min-width: 1024px) {
+    /* Productos */
+
+    .main-producto {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .art {
+        width: 45vw;
+    }
+
+    .producto {
+        width: 300px;
+        height: 300px;
+    }
+
+    /* Informacion adicional */
+
+
+    .videos {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .caja-videos{
+        padding: 0.6rem 1.8rem;
+    }
+}
